# tomoco

./: .gitignore  LICENSE  README.md  Tutorial.ipynb  build-push-pypi.sh  build-push-pypi.txt  git-push.sh  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/tomoco/: __init__.py  model_compression.py
src/tomoco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
