[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "tomoco"
version = "0.0.10"
dynamic = ["dependencies"]
authors = [
  { name="Sathyaprakash", email="snaray17@ucsc.edu" },
]
description = "A CNN Channel Pruning System"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/satabios/model-compression"
"Bug Tracker" = "https://github.com/satabios/model-compression/issues"
